[project]
name = "cert-mcp-server"
version = "1.0.0"
description = "MCP server for managing SSL/TLS certificates across multiple device types using Let's Encrypt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "fastmcp>=0.2.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "acme>=2.0.0",
    "josepy>=1.13.0",
    "cryptography>=41.0.0",
    "paramiko>=3.0.0",
    "pywinrm>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cert-mcp = "cert_mcp.server:main"
cert-mcp-http = "cert_mcp.server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
